--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Sep 14 2022 08:16:48 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Sep 18 2022 13:13:29 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="627173f28b96969d36e6a98b" data-wf-site="61bba3b3c26659558fdd2a7b">
 <head>
   <meta charset="utf-8">
@@ -30,15 +30,16 @@
   <meta name="google-site-verification" content="pwE1tlRCgkTCf9vj-ch5A8ml8zfThOoOvesvGE0Rt3I">
 </head>
 <body>
-  <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
-    <div class="my-container w-container">
-      <a href="index.html" aria-current="page" class="brand w-nav-brand w--current"><img src="images/LOGO.svg" loading="lazy" alt=""></a>
-      <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="index.html" aria-current="page" class="nav-link active w-nav-link w--current">Work</a>
-        <a href="old-home-2.html" class="nav-link w-nav-link">About</a>
+  <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="new-navbar w-nav">
+    <div class="_1280-container w-container">
+      <a href="index.html" aria-current="page" class="brand-2 w-nav-brand w--current"><img src="images/LOGOWhite.svg" loading="lazy" alt=""></a>
+      <nav role="navigation" class="nav-menu-2 w-nav-menu">
+        <a href="index.html" aria-current="page" class="navitem w-nav-link w--current">Work</a>
+        <a href="old-home-2.html" class="navitem w-nav-link">About</a>
+        <a href="https://znap.link/desmondajimuda" target="_blank" class="navitem w-nav-link">Socials</a>
       </nav>
-      <div class="menu-button light light-theeeme _1 w-nav-button">
-        <div class="icon w-icon-nav-menu"></div>
+      <div class="menu-button-2 w-nav-button">
+        <div class="icon-2 w-icon-nav-menu"></div>
       </div>
     </div>
   </div>
@@ -57,62 +58,49 @@
       <div class="content-left-aligned">
         <p>I&#x27;m a product designer based in Lagos, Nigeria with experience in creating innovative and impactful design solutions for software products through end to end UI/UX. </p>
       </div>
-      <a href="#WORK" class="button-ghost w-button">CHECK OUT MY WORK</a>
+      <a href="#Work" class="button-ghost w-button">CHECK OUT MY WORK</a>
     </div>
   </div>
-  <div id="WORK" class="section wf-section">
-    <div class="my-container">
-      <div class="content">
-        <h2 class="center-text">&quot;Simple is Better&quot;</h2>
-        <p class="center-text">Throughout my career as a designer, I&#x27;ve been privileged to work with talented designers to innovate consumer products that simplify millions of people&#x27;s lives for organisations such as Clane, Sterling Bank, Betking and others. some of these projects touch upon their core businesses and are, unfortunately, not available to view.<br></p>
-        <p class="semi-bold-p">Here are a few projects that I&#x27;d like to share</p>
-        <div class="text-block-2"></div>
+  <div id="Work" class="section wf-section">
+    <div class="_1280-container">
+      <div class="section-block home">
+        <h2 class="center-align">&quot; Simple is better &quot;</h2>
+        <p class="center">Throughout my career as a designer, I&#x27;ve been privileged to work with talented designers to innovate consumer products that simplify millions of people&#x27;s lives for organisations such as Clane, Sterling Bank, Betking and others. some of these projects touch upon their core businesses and are, unfortunately, not available to view.</p>
       </div>
-    </div>
-  </div>
-  <div class="section hidden wf-section">
-    <div class="my-container">
-      <div class="w-layout-grid grid-28">
-        <a id="w-node-f4cc1fe3-8b83-6f8e-6ee5-3e671a505ebd-36e6a98b" href="#" class="w-inline-block">
-          <div id="w-node-_9f875740-1ecb-ab6a-c1f1-cd1a8549bc30-36e6a98b" class="w-layout-grid grid-27">
-            <div id="w-node-_53d6170a-c6a1-7ac4-420e-c73e58687317-36e6a98b"><img src="images/Optimus-Bank.jpg" loading="lazy" srcset="images/Optimus-Bank-p-500.jpg 500w, images/Optimus-Bank-p-800.jpg 800w, images/Optimus-Bank-p-1080.jpg 1080w, images/Optimus-Bank-p-1600.jpg 1600w, images/Optimus-Bank-p-2000.jpg 2000w, images/Optimus-Bank-p-2600.jpg 2600w, images/Optimus-Bank-p-3200.jpg 3200w, images/Optimus-Bank.jpg 3200w" sizes="(max-width: 479px) 0px, 100vw" alt=""></div>
-            <div id="w-node-_99393ccb-3b69-fa97-008f-c741cbc86fd5-36e6a98b">
-              <p class="project-title">Optimus bank experience design</p>
-              <p class="project-year">ClaneLabs 2022</p>
+      <div class="w-layout-grid grid-29">
+        <a id="w-node-b79cc587-4f0c-5d54-8aa2-43bc8b4105a0-36e6a98b" href="clanepos.html" class="project-link w-inline-block">
+          <div id="w-node-c78e2f32-3ccb-74d4-5c08-ee68b5fbacb7-36e6a98b" class="project-background">
+            <div>
+              <p class="paragraph-7">ClanePOS: Turn your phone into a POS</p>
+              <p>I designed a device that enables merchant to enhance their services and revenue.</p>
             </div>
+            <div class="div-block-41"><img src="images/clanePOS3x-min.png" loading="lazy" alt="ClanePOS Project image" sizes="(max-width: 479px) 100vw, (max-width: 767px) 71vw, (max-width: 991px) 69vw, 67vw" srcset="images/clanePOS3x-min-p-500.png 500w, images/clanePOS3x-min-p-800.png 800w, images/clanePOS3x-min.png 1032w" class="image-10"></div>
           </div>
         </a>
-        <a id="w-node-e78fb182-c80e-1bdf-e107-be7e17286039-36e6a98b" href="#" class="w-inline-block">
-          <div id="w-node-da8ddd27-31ca-a44b-d641-8677ab01516b-36e6a98b" class="w-layout-grid grid-27">
-            <div id="w-node-da8ddd27-31ca-a44b-d641-8677ab01516c-36e6a98b"><img src="images/ClanePOS-Cover.jpg" loading="lazy" srcset="images/ClanePOS-Cover-p-500.jpg 500w, images/ClanePOS-Cover-p-800.jpg 800w, images/ClanePOS-Cover-p-1080.jpg 1080w, images/ClanePOS-Cover-p-1600.jpg 1600w, images/ClanePOS-Cover-p-2000.jpg 2000w, images/ClanePOS-Cover-p-2600.jpg 2600w, images/ClanePOS-Cover-p-3200.jpg 3200w, images/ClanePOS-Cover.jpg 3200w" sizes="(max-width: 479px) 0px, 100vw" alt=""></div>
-            <div id="w-node-da8ddd27-31ca-a44b-d641-8677ab01516e-36e6a98b">
-              <p class="project-title">ClanePOS</p>
-              <p class="project-year">Clane 2022</p>
+        <a id="w-node-_95494641-752b-8d36-d0bb-77299335d95d-36e6a98b" href="experience-revamp-of-clanepay.html" class="project-link w-inline-block">
+          <div id="w-node-_95494641-752b-8d36-d0bb-77299335d95e-36e6a98b" class="project-background">
+            <div>
+              <p class="paragraph-7">Experience revamp of ClanePay </p>
+              <p>I designed a device that enables merchant to enhance their services and revenue.</p>
             </div>
+            <div class="div-block-41"><img src="images/ClanePAY-intro-min.png" loading="lazy" alt="ClanePay Project image" sizes="(max-width: 479px) 100vw, (max-width: 767px) 71vw, (max-width: 991px) 69vw, 67vw" srcset="images/ClanePAY-intro-min.png 500w, images/ClanePAY-intro-min.png 800w, images/ClanePAY-intro-min.png 1126w" class="image-10"></div>
           </div>
         </a>
-        <a id="w-node-_168dec3a-4d2f-f60c-e57c-59184be68eaf-36e6a98b" href="#" class="w-inline-block">
-          <div id="w-node-c545102e-217d-1331-d0ee-202eba192606-36e6a98b" class="w-layout-grid grid-27">
-            <div id="w-node-c545102e-217d-1331-d0ee-202eba192607-36e6a98b"><img src="images/ClanepayCover.jpg" loading="lazy" srcset="images/ClanepayCover-p-500.jpg 500w, images/ClanepayCover-p-800.jpg 800w, images/ClanepayCover-p-1080.jpg 1080w, images/ClanepayCover-p-1600.jpg 1600w, images/ClanepayCover-p-2000.jpg 2000w, images/ClanepayCover-p-2600.jpg 2600w, images/ClanepayCover-p-3200.jpg 3200w, images/ClanepayCover.jpg 3200w" sizes="(max-width: 479px) 0px, 100vw" alt=""></div>
-            <div id="w-node-c545102e-217d-1331-d0ee-202eba192609-36e6a98b">
-              <p class="project-title">ClanePay experience revamp</p>
-              <p class="project-year">Clane 2022</p>
+      </div>
+      <div class="w-layout-grid grid-31">
+        <a id="w-node-_61fe8beb-978c-b9f2-f0fa-58bcb3367e9d-36e6a98b" href="underconstruction.html" class="project-link w-inline-block">
+          <div id="w-node-_61fe8beb-978c-b9f2-f0fa-58bcb3367e9e-36e6a98b" class="project-background cut">
+            <div>
+              <p class="paragraph-7 center">Optimal banking experience design for Optimus Bank</p>
+              <p class="paragraph-9">I designed an optimal banking experience on web and mobile app for Optimus bank.</p>
             </div>
-          </div>
-        </a>
-        <a id="w-node-_9b62be61-5120-6df0-b377-2d4eb6a1373d-36e6a98b" href="#" class="w-inline-block">
-          <div id="w-node-_96a10d96-913b-43a1-95af-f79be45fc40f-36e6a98b" class="w-layout-grid grid-27">
-            <div id="w-node-_96a10d96-913b-43a1-95af-f79be45fc410-36e6a98b"><img src="images/OnePay-Cover.jpg" loading="lazy" srcset="images/OnePay-Cover-p-500.jpg 500w, images/OnePay-Cover-p-800.jpg 800w, images/OnePay-Cover-p-1080.jpg 1080w, images/OnePay-Cover-p-1600.jpg 1600w, images/OnePay-Cover-p-2000.jpg 2000w, images/OnePay-Cover-p-2600.jpg 2600w, images/OnePay-Cover-p-3200.jpg 3200w, images/OnePay-Cover.jpg 3200w" sizes="(max-width: 479px) 0px, 100vw" alt=""></div>
-            <div id="w-node-_96a10d96-913b-43a1-95af-f79be45fc412-36e6a98b">
-              <p class="project-title">OnePay for business merchant dashboard</p>
-              <p class="project-year">ClaneLab 2021</p>
-            </div>
+            <div class="div-block-41"><img src="images/Optimus-Bank.jpg" loading="lazy" alt="Optimus bank project image" sizes="(max-width: 479px) 100vw, (max-width: 767px) 71vw, (max-width: 991px) 69vw, 67vw" srcset="images/Optimus-Bank.jpg 500w, images/Optimus-Bank.jpg 800w, images/Optimus-Bank.jpg 1080w, images/Optimus-Bank.jpg 1600w, images/Optimus-Bank.jpg 2000w, images/Optimus-Bank.jpg 2600w, images/Optimus-Bank.jpg 3200w, images/Optimus-Bank.jpg 3200w" class="image-10"></div>
           </div>
         </a>
       </div>
     </div>
   </div>
-  <div class="section wf-section">
+  <div class="section hidden wf-section">
     <div class="my-container">
       <div class="side-by-side-flex">
         <div class="project-details">
@@ -122,14 +110,14 @@
             <a href="experience-revamp-of-clanepay.html" class="button-ghost w-button">VIEW PROJECT</a>
           </div>
         </div>
-        <div class="project-image"><img src="images/ClanepayCover-min.jpg" loading="lazy" width="540" srcset="images/ClanepayCover-min-p-500.jpg 500w, images/ClanepayCover-min-p-800.jpg 800w, images/ClanepayCover-min-p-1080.jpg 1080w, images/ClanepayCover-min-p-1600.jpg 1600w, images/ClanepayCover-min-p-2000.jpg 2000w, images/ClanepayCover-min-p-2600.jpg 2600w, images/ClanepayCover-min-p-3200.jpg 3200w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 540px, 44vw" alt="Clanepay intro image"></div>
+        <div class="project-image"><img src="images/ClanepayCover-min.jpg" loading="lazy" width="540" srcset="images/ClanepayCover-min-p-500.jpg 500w, images/ClanepayCover-min-p-800.jpg 800w, images/ClanepayCover-min-p-1080.jpg 1080w, images/ClanepayCover-min-p-1600.jpg 1600w, images/ClanepayCover-min-p-2000.jpg 2000w, images/ClanepayCover-min-p-2600.jpg 2600w, images/ClanepayCover-min-p-3200.jpg 3200w" sizes="(max-width: 479px) 0px, 100vw" alt="Clanepay intro image"></div>
       </div>
     </div>
   </div>
-  <div class="section wf-section">
+  <div class="section hidden wf-section">
     <div class="my-container">
       <div class="reverse-flex">
-        <div class="left-image-block"><img src="images/ClanePOS-Cover-min.jpg" loading="lazy" width="540" srcset="images/ClanePOS-Cover-min-p-500.jpg 500w, images/ClanePOS-Cover-min-p-800.jpg 800w, images/ClanePOS-Cover-min-p-1080.jpg 1080w, images/ClanePOS-Cover-min-p-1600.jpg 1600w, images/ClanePOS-Cover-min-p-2000.jpg 2000w, images/ClanePOS-Cover-min-p-2600.jpg 2600w, images/ClanePOS-Cover-min-p-3200.jpg 3200w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 540px, 44vw" alt="ClanePOS"></div>
+        <div class="left-image-block"><img src="images/ClanePOS-Cover-min.jpg" loading="lazy" width="540" srcset="images/ClanePOS-Cover-min-p-500.jpg 500w, images/ClanePOS-Cover-min-p-800.jpg 800w, images/ClanePOS-Cover-min-p-1080.jpg 1080w, images/ClanePOS-Cover-min-p-1600.jpg 1600w, images/ClanePOS-Cover-min-p-2000.jpg 2000w, images/ClanePOS-Cover-min-p-2600.jpg 2600w, images/ClanePOS-Cover-min-p-3200.jpg 3200w" sizes="(max-width: 479px) 0px, 100vw" alt="ClanePOS"></div>
         <div class="left-project-details">
           <div class="div-block-37">
             <h3>ClanePOS: Turn your phone into a POS.</h3>
@@ -142,20 +130,6 @@
   </div>
   <div class="section hidden wf-section">
     <div class="my-container">
-      <div class="side-by-side-flex reverse">
-        <div class="project-details">
-          <div class="div-block-36">
-            <h3>Experience revamp of ClanePay formerly Clane.</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.</p>
-            <a href="#" class="button-ghost w-button">LEARN MORE</a>
-          </div>
-        </div>
-        <div class="project-image"><img src="images/ClanepayCover.jpg" loading="lazy" srcset="images/ClanepayCover-p-500.jpg 500w, images/ClanepayCover-p-800.jpg 800w, images/ClanepayCover-p-1080.jpg 1080w, images/ClanepayCover-p-1600.jpg 1600w, images/ClanepayCover-p-2000.jpg 2000w, images/ClanepayCover-p-2600.jpg 2600w, images/ClanepayCover-p-3200.jpg 3200w, images/ClanepayCover.jpg 3200w" sizes="(max-width: 479px) 0px, 100vw" alt=""></div>
-      </div>
-    </div>
-  </div>
-  <div class="section wf-section">
-    <div class="my-container">
       <div class="side-by-side-flex">
         <div class="project-details">
           <div class="div-block-36">
@@ -164,14 +138,14 @@
             <a href="underconstruction.html" class="button-ghost w-button">VIEW PROJECT</a>
           </div>
         </div>
-        <div class="project-image"><img src="images/Optimus-Bank-min.jpg" loading="lazy" width="540" srcset="images/Optimus-Bank-min-p-500.jpg 500w, images/Optimus-Bank-min-p-800.jpg 800w, images/Optimus-Bank-min-p-1080.jpg 1080w, images/Optimus-Bank-min-p-1600.jpg 1600w, images/Optimus-Bank-min-p-2000.jpg 2000w, images/Optimus-Bank-min-p-2600.jpg 2600w, images/Optimus-Bank-min-p-3200.jpg 3200w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 540px, 44vw" alt="OPTIMUS"></div>
+        <div class="project-image"><img src="images/Optimus-Bank-min.jpg" loading="lazy" width="540" srcset="images/Optimus-Bank-min-p-500.jpg 500w, images/Optimus-Bank-min-p-800.jpg 800w, images/Optimus-Bank-min-p-1080.jpg 1080w, images/Optimus-Bank-min-p-1600.jpg 1600w, images/Optimus-Bank-min-p-2000.jpg 2000w, images/Optimus-Bank-min-p-2600.jpg 2600w, images/Optimus-Bank-min-p-3200.jpg 3200w" sizes="(max-width: 479px) 0px, 100vw" alt="OPTIMUS"></div>
       </div>
     </div>
   </div>
-  <div class="section wf-section">
+  <div class="section hidden wf-section">
     <div class="my-container">
       <div class="reverse-flex">
-        <div class="left-image-block"><img src="images/OnePay-Cover-min.jpg" loading="lazy" width="540" srcset="images/OnePay-Cover-min-p-500.jpg 500w, images/OnePay-Cover-min-p-800.jpg 800w, images/OnePay-Cover-min-p-1080.jpg 1080w, images/OnePay-Cover-min-p-1600.jpg 1600w, images/OnePay-Cover-min-p-2000.jpg 2000w, images/OnePay-Cover-min-p-2600.jpg 2600w, images/OnePay-Cover-min-p-3200.jpg 3200w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 540px, 44vw" alt="STERLING"></div>
+        <div class="left-image-block"><img src="images/OnePay-Cover-min.jpg" loading="lazy" width="540" srcset="images/OnePay-Cover-min-p-500.jpg 500w, images/OnePay-Cover-min-p-800.jpg 800w, images/OnePay-Cover-min-p-1080.jpg 1080w, images/OnePay-Cover-min-p-1600.jpg 1600w, images/OnePay-Cover-min-p-2000.jpg 2000w, images/OnePay-Cover-min-p-2600.jpg 2600w, images/OnePay-Cover-min-p-3200.jpg 3200w" sizes="(max-width: 479px) 0px, 100vw" alt="STERLING"></div>
         <div class="left-project-details">
           <div class="div-block-37">
             <h3>OnePay for business merchant dashboard</h3>
@@ -182,31 +156,23 @@
       </div>
     </div>
   </div>
-  <div class="work-section footer wf-section">
-    <div class="container">
-      <div class="border light"></div>
-      <div class="w-layout-grid grid-25">
-        <div id="w-node-a9b1d845-2904-8ed4-60f6-33930f8e9a60-0f8e9a5c" class="connect">
-          <h3 class="light-footer">Connect</h3>
-          <div id="w-node-a9b1d845-2904-8ed4-60f6-33930f8e9a63-0f8e9a5c">
-            <a href="http://www.linkedin.com/in/desmond-ajimuda-384394127" target="_blank" class="link-3 light-theme">Linkedln</a>
-            <a href="https://medium.com/@jazzed_navy_mule_655" class="link-3 light">Medium</a>
-            <a href="https://www.behance.net/creativdirecto5" target="_blank" class="link-3 light">Behance</a>
-          </div>
-        </div>
-        <div id="w-node-a9b1d845-2904-8ed4-60f6-33930f8e9a6a-0f8e9a5c" class="contact">
-          <h3 class="heading-15">Contact</h3>
-          <div id="w-node-a9b1d845-2904-8ed4-60f6-33930f8e9a6d-0f8e9a5c">
-            <a href="tel:+2349057300442" class="link-3 light">+2349057300442</a>
-            <a href="mailto:desmondajimuda@gmail.com" class="link-3 light">desmondajimuda@gmail.com</a>
-          </div>
-        </div>
-        <div id="w-node-a9b1d845-2904-8ed4-60f6-33930f8e9a72-0f8e9a5c" class="get-in-touch">
-          <a id="w-node-a9b1d845-2904-8ed4-60f6-33930f8e9a73-0f8e9a5c" href="mailto:desmondajimuda@gmail.com" class="full-button w-button">GET IN TOUCH</a>
-        </div>
+  <div id="WORK" class="section hidden wf-section">
+    <div class="my-container">
+      <div class="content">
+        <h2 class="center-text">&quot;Simple is Better&quot;</h2>
+        <p class="center-text">Throughout my career as a designer, I&#x27;ve been privileged to work with talented designers to innovate consumer products that simplify millions of people&#x27;s lives for organisations such as Clane, Sterling Bank, Betking and others. some of these projects touch upon their core businesses and are, unfortunately, not available to view.<br></p>
+        <p class="semi-bold-p">Here are a few projects that I&#x27;d like to share</p>
+        <div class="text-block-2"></div>
       </div>
-      <div class="footer-right-align">
-        <div class="copyright-2">Copyright ©Desmond Ajimuda.<br></div>
+    </div>
+  </div>
+  <div class="dark-section wf-section">
+    <div class="my-container">
+      <div class="center-flex">
+        <div><img src="images/IMG_1260-removebg-preview.png" loading="lazy" alt="desmond&#x27;s emoji"></div>
+        <div class="div-block-42">
+          <a href="old-home-2.html" class="link-4">About me</a>
+        </div>
       </div>
     </div>
   </div>
