--- a/old-home-2.html
+++ b/old-home-2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Sep 14 2022 08:16:48 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Sep 18 2022 13:13:29 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="627173f28b9696263ce6a990" data-wf-site="61bba3b3c26659558fdd2a7b">
 <head>
   <meta charset="utf-8">
@@ -28,42 +28,74 @@
   <meta name="google-site-verification" content="pwE1tlRCgkTCf9vj-ch5A8ml8zfThOoOvesvGE0Rt3I">
 </head>
 <body class="body-3">
-  <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar dark-navbar w-nav">
-    <div class="my-container w-container">
-      <a href="index.html" class="brand w-nav-brand"><img src="images/LOGOWhite.svg" loading="lazy" alt=""></a>
-      <nav role="navigation" class="nav-menu dark-mobile w-nav-menu">
-        <a href="index.html" class="nav-link dark w-nav-link">Work</a>
-        <a href="old-home-2.html" aria-current="page" class="nav-link about w-nav-link w--current">About</a>
+  <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="new-navbar w-nav">
+    <div class="_1280-container w-container">
+      <a href="index.html" class="brand-2 w-nav-brand"><img src="images/LOGOWhite.svg" loading="lazy" alt=""></a>
+      <nav role="navigation" class="nav-menu-2 w-nav-menu">
+        <a href="index.html" class="navitem w-nav-link">Work</a>
+        <a href="old-home-2.html" aria-current="page" class="navitem w-nav-link w--current">About</a>
+        <a href="https://znap.link/desmondajimuda" target="_blank" class="navitem w-nav-link">Socials</a>
       </nav>
-      <div class="menu-button dark _2 w-nav-button">
-        <div class="icon dark-icon w-icon-nav-menu"></div>
+      <div class="menu-button-2 w-nav-button">
+        <div class="icon-2 w-icon-nav-menu"></div>
       </div>
     </div>
   </div>
-  <div class="section-2 first wf-section">
-    <div class="container">
-      <h1 class="heading-25">Product Designer,<br>Fashionista &amp; Music Lover.</h1>
-      <div class="w-layout-grid grid-20"><img src="images/E1111A29-6541-41AB-9279-EF3E553EA9B4.jpg" loading="lazy" id="w-node-_9ff480d6-4b10-c234-397c-6c964429358c-3ce6a990" srcset="images/E1111A29-6541-41AB-9279-EF3E553EA9B4-p-500.jpeg 500w, images/E1111A29-6541-41AB-9279-EF3E553EA9B4-p-800.jpeg 800w, images/E1111A29-6541-41AB-9279-EF3E553EA9B4-p-1080.jpeg 1080w, images/E1111A29-6541-41AB-9279-EF3E553EA9B4-p-1600.jpeg 1600w, images/E1111A29-6541-41AB-9279-EF3E553EA9B4-p-2000.jpeg 2000w, images/E1111A29-6541-41AB-9279-EF3E553EA9B4.jpg 2027w" alt="Desmond At work 2" sizes="(max-width: 479px) 93vw, (max-width: 767px) 95vw, (max-width: 991px) 91vw, 90vw" class="image-5"><img src="images/IMG_0125-3.jpg" loading="lazy" id="w-node-_9ff480d6-4b10-c234-397c-6c964429358d-3ce6a990" srcset="images/IMG_0125-3-p-500.jpeg 500w, images/IMG_0125-3-p-800.jpeg 800w, images/IMG_0125-3-p-1080.jpeg 1080w, images/IMG_0125-3.jpg 1225w" alt="Desmond At work" sizes="(max-width: 479px) 93vw, (max-width: 767px) 95vw, (max-width: 991px) 91vw, 90vw" class="image-6"></div>
-    </div>
-  </div>
-  <div class="dark-section wf-section">
-    <div class="container">
-      <div class="content-2">
-        <h2 class="heading-8">About Me</h2>
-        <p class="paragraph-4">My name is Desmond Ajimuda and I&#x27;m passionate about improving the lives of others through design. I have been designing for the past three years and I am specialized in helping companies and SMEs grow their business. In the last three years, I have helped a few companies in over ten different industries.<br><br>I believe the first and foremost step to building an accessible product is to build empathy and find the right balance between user needs, business requirements and technical limitations.<br><br>I have learnt a lot of the processes, concepts and theories of UX/UI and product design through the Google UX Design Professional Certificate course, attending workshops, reading blogs and applying these to projects in my spare time and at work. I am very much a big-picture thinker and enjoy working on products end to end, from ideation to development.<br></p>
+  <div class="section wf-section">
+    <div class="my-container w-container">
+      <div class="w-layout-grid grid-2">
+        <div id="w-node-_403479c2-9061-c4a6-7b67-bd7ce31133ca-3ce6a990" class="imageblock"><img src="images/Desmond-Ajimuda-pics-min.jpg" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 91vw, 89vw" srcset="images/Desmond-Ajimuda-pics-min-p-500.jpg 500w, images/Desmond-Ajimuda-pics-min-p-800.jpg 800w, images/Desmond-Ajimuda-pics-min-p-1080.jpg 1080w, images/Desmond-Ajimuda-pics-min-p-1600.jpg 1600w, images/Desmond-Ajimuda-pics-min-p-2000.jpg 2000w, images/Desmond-Ajimuda-pics-min.jpg 3024w" alt="" class="image curve"></div>
+        <div id="w-node-_403479c2-9061-c4a6-7b67-bd7ce31133cc-3ce6a990" class="div-block">
+          <h2>I am Desmond Ajimuda</h2>
+          <p id="w-node-_403479c2-9061-c4a6-7b67-bd7ce31133cf-3ce6a990">I&#x27;m a product designer and Webflow developer, building the future of payment in Africa at Clane in Nigeria.<br>‍<br>I have been designing for the past three years and I am specialized in helping companies and SMEs grow their business. In the last three years, I have helped a few companies in over ten different industries.<br><br>I believe the first and foremost step to building an accessible product is to build empathy and find the right balance between user needs, business requirements and technical limitations.<br><br>I have learnt a lot of the processes, concepts and theories of UX/UI and product design through the Google UX Design Professional Certificate course, attending workshops, reading blogs and applying these to projects in my spare time and at work.<br></p>
+        </div>
       </div>
     </div>
   </div>
-  <div class="dark-section wf-section">
+  <div class="section wf-section">
     <div class="container">
-      <div class="content-2">
+      <div class="w-layout-grid grid-33">
         <div class="design-skills">
           <h2 class="heading-8">Design Skills</h2>
-          <p class="paragraph-4">UI/UX Design, UX Research, Graphics Design, Visual Design, Wireframing, Prototyping, Web Design, Affinity Maps, Information Architecture, User Flows, Mobile Design, HTML5, CSS3 and Webflow development.</p>
+          <p>UI/UX Design, UX Research, Graphics Design, Visual Design, Wireframing, Prototyping, Web Design, Affinity Maps, Information Architecture, User Flows, Mobile Design, HTML5, CSS3 and Webflow development.</p>
         </div>
         <div class="technical-skills">
           <h2 class="heading-8">Technical skills</h2>
-          <p class="paragraph-6">Figma, Sketch, Invision Studio, Invision, Miro, Adobe XD, Zeplin, After Effects, Flowmapp, Trello, Protopie &amp; Keynote.</p>
+          <p>Figma, Sketch, Invision Studio, Invision, Miro, Adobe XD, Zeplin, After Effects, Flowmapp, Trello, Protopie &amp; Keynote.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="section wf-section">
+    <div class="my-container w-container">
+      <div class="w-layout-grid grid-4">
+        <div id="w-node-_889d593a-fa6b-e38a-d314-231c381fb404-3ce6a990" class="div-block">
+          <h3 class="minus-top-10"><strong>Clane Company, </strong>Nigeria</h3>
+          <p class="dim">Lead Product Designer</p>
+          <p class="paragraph-10">Oct-2021 to present</p>
+        </div>
+        <div id="w-node-_889d593a-fa6b-e38a-d314-231c381fb40d-3ce6a990">
+          <p>Lead and oversaw the redesign of the ClanePay Mobile App.<br>A digital wallet or Peer to peer payment App, as one of the products of Clane&#x27;s 2 sided network.<br><br>Lead the design of the ClanePOS mobile app and web dashboard.<br>A mobile POS that allow merchant collect sales and manage their business all in one app, catering for over 20,000+ merchants in Nigeria.<br><br>Lead the design of Clane Referral Program.<br>A program that benefitted both party, with 600% increase in downloads and sign ups<br><br>Lead the development of the design system used by Clane interface products.<br></p>
+        </div>
+      </div>
+      <div class="w-layout-grid grid-4">
+        <div id="w-node-_889d593a-fa6b-e38a-d314-231c381fb421-3ce6a990" class="div-block">
+          <h3 class="minus-top-10"><strong>Sterling bank, </strong>Nigeria</h3>
+          <p class="dim">Freelance</p>
+          <p class="paragraph-10">March  2020 - June 2020</p>
+        </div>
+        <div id="w-node-_889d593a-fa6b-e38a-d314-231c381fb42a-3ce6a990">
+          <p>Designed the Sterling OnePay for business merchant dashboard. <br>A merchant dashboard that catered for over 20,oo0+ small and large business merchant in Africa <br><br>Redesigned the Sterling OnePay for business mobile App and designed Sterling OnePay for business Cashier feature on web.<br></p>
+        </div>
+      </div>
+      <div class="w-layout-grid grid-4">
+        <div id="w-node-_889d593a-fa6b-e38a-d314-231c381fb434-3ce6a990" class="div-block">
+          <h3 class="minus-top-10"><strong>Brill escrow, </strong>Nigeria</h3>
+          <p class="dim">Freelance</p>
+          <p class="paragraph-10">Oct-2021 to present</p>
+        </div>
+        <div id="w-node-_889d593a-fa6b-e38a-d314-231c381fb43d-3ce6a990">
+          <p>Lead and oversaw the design and developement of Brill Escrow webstie and mobile App.<br>‍<br></p>
         </div>
       </div>
     </div>
@@ -71,7 +103,7 @@
   <div class="dark-section wf-section">
     <div class="container">
       <div class="content-2">
-        <h2 class="heading-8">In my spare time, I design dope T-shirts.</h2>
+        <h2 class="heading-35">In my spare time, I design dope T-shirts.</h2>
       </div>
       <div class="w-layout-grid grid-23"><img src="images/Dare-to-dream.png" loading="lazy" width="540" id="w-node-_5d88c549-760d-03c1-d47a-d2309c0dbdb1-3ce6a990" alt="Designers T-shirts" sizes="(max-width: 479px) 94vw, (max-width: 767px) 47vw, (max-width: 991px) 45vw, 28vw" srcset="images/Dare-to-dream-p-500.png 500w, images/Dare-to-dream-p-800.png 800w, images/Dare-to-dream.png 1080w" class="image-7"><img src="images/Averti-X-ggFresh-WHITE.png" loading="lazy" id="w-node-_5d88c549-760d-03c1-d47a-d2309c0dbdb2-3ce6a990" srcset="images/Averti-X-ggFresh-WHITE-p-500.png 500w, images/Averti-X-ggFresh-WHITE-p-800.png 800w, images/Averti-X-ggFresh-WHITE.png 1080w" alt="New Leaf T-shirts" sizes="(max-width: 479px) 94vw, (max-width: 767px) 47vw, (max-width: 991px) 45vw, 28vw" class="image-7"><img src="images/FeelGoodBlackTee.png" loading="lazy" id="w-node-_5d88c549-760d-03c1-d47a-d2309c0dbdb3-3ce6a990" srcset="images/FeelGoodBlackTee-p-500.png 500w, images/FeelGoodBlackTee-p-800.png 800w, images/FeelGoodBlackTee.png 1080w" alt="Feel Good T-shirts" sizes="(max-width: 479px) 94vw, (max-width: 767px) 47vw, (max-width: 991px) 45vw, 28vw" class="image-7"></div>
     </div>
@@ -79,39 +111,15 @@
   <div class="dark-section wf-section">
     <div class="container">
       <div class="content-2">
-        <h2 class="heading-8">Music helps me stay focused without being boring.</h2>
+        <h2 class="heading-36">Music helps me stay focused without being boring.</h2>
       </div>
       <div class="w-layout-grid grid-24">
-        <div id="w-node-_77edf31d-9ae4-6dcf-bc90-66d5bf67b3de-3ce6a990" class="w-embed w-iframe"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5CdazoFWrHqZUivA9Qm4RC?utm_source=generator" width="100%" height="380" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe></div>
-        <div id="w-node-_77edf31d-9ae4-6dcf-bc90-66d5bf67b3e0-3ce6a990" class="w-embed w-iframe"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/78XW6Q1joXIB55U7DUw3fo?utm_source=generator&theme=0" width="100%" height="380" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe></div>
-      </div>
-    </div>
-  </div>
-  <div class="dark-section wf-section">
-    <div class="container">
-      <div class="border"></div>
-      <div class="w-layout-grid grid-26">
-        <div id="w-node-a1eeba4d-bead-7e00-6910-3cc9f264814a-3ce6a990" class="connect">
-          <h3 class="heading-23">Connect</h3>
-          <div id="w-node-a1eeba4d-bead-7e00-6910-3cc9f264814d-3ce6a990">
-            <a href="http://www.linkedin.com/in/desmond-ajimuda-384394127" target="_blank" class="link-3">Linkedln</a>
-            <a href="https://medium.com/@jazzed_navy_mule_655" class="link-3">Medium</a>
-            <a href="https://www.behance.net/creativdirecto5" target="_blank" class="link-3">Behance</a>
-          </div>
+        <div id="w-node-a56cc014-39c5-cd79-0b02-a4ba5422fef2-3ce6a990" class="div-block-47">
+          <div id="w-node-_77edf31d-9ae4-6dcf-bc90-66d5bf67b3de-3ce6a990" class="w-embed w-iframe"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5CdazoFWrHqZUivA9Qm4RC?utm_source=generator" width="100%" height="380" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe></div>
         </div>
-        <div id="w-node-a1eeba4d-bead-7e00-6910-3cc9f2648154-3ce6a990" class="contact">
-          <h3 class="heading-24">Contact</h3>
-          <div id="w-node-a1eeba4d-bead-7e00-6910-3cc9f2648157-3ce6a990">
-            <a href="tel:+2349057300442" class="link-3">+2349057300442</a>
-            <a href="mailto:desmondajimuda@gmail.com" class="link-3">desmondajimuda@gmail.com</a>
-          </div>
+        <div id="w-node-_54817464-6978-1b3b-33a0-f702910bf5c4-3ce6a990" class="div-block-48">
+          <div id="w-node-_77edf31d-9ae4-6dcf-bc90-66d5bf67b3e0-3ce6a990" class="w-embed w-iframe"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/78XW6Q1joXIB55U7DUw3fo?utm_source=generator&theme=0" width="100%" height="380" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe></div>
         </div>
-        <div id="w-node-a1eeba4d-bead-7e00-6910-3cc9f264815c-3ce6a990" class="get-in-touch">
-          <a id="w-node-a1eeba4d-bead-7e00-6910-3cc9f264815d-3ce6a990" href="mailto:desmondajimuda@gmail.com" class="button-2 w-button">Get in touch</a>
-        </div>
-      </div>
-      <div class="footer-right-align">
-        <div class="copywright-dark-theme">Copyright ©Desmond Ajimuda.<br></div>
       </div>
     </div>
   </div>
