--- a/one-pay-for-business-merchant-dashboard.html
+++ b/one-pay-for-business-merchant-dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Sep 14 2022 08:16:48 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Sep 18 2022 13:13:29 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="627173f28b96963a78e6a994" data-wf-site="61bba3b3c26659558fdd2a7b">
 <head>
   <meta charset="utf-8">
@@ -30,7 +30,7 @@
 <body>
   <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="my-container w-container">
-      <a href="index.html" class="brand w-nav-brand"><img src="images/LOGO.svg" loading="lazy" alt=""></a>
+      <a href="index.html" class="brand w-nav-brand"><img src="images/LOGOWhite.svg" loading="lazy" alt="" class="image-9"></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" class="nav-link active w-nav-link">Work</a>
         <a href="old-home-2.html" class="nav-link w-nav-link">About</a>
