--- a/underconstruction.html
+++ b/underconstruction.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Sep 14 2022 08:16:48 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Sep 18 2022 13:13:29 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63204aadd1d6583b4ed70b8c" data-wf-site="61bba3b3c26659558fdd2a7b">
 <head>
   <meta charset="utf-8">
@@ -22,16 +22,17 @@
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-3XF66MM2H3', {'anonymize_ip': false});</script>
   <meta name="google-site-verification" content="pwE1tlRCgkTCf9vj-ch5A8ml8zfThOoOvesvGE0Rt3I">
 </head>
-<body>
-  <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
-    <div class="my-container w-container">
-      <a href="index.html" class="brand w-nav-brand"><img src="images/LOGO.svg" loading="lazy" alt=""></a>
-      <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="index.html" class="nav-link active w-nav-link">Work</a>
-        <a href="old-home-2.html" class="nav-link w-nav-link">About</a>
+<body class="body-5">
+  <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="new-navbar w-nav">
+    <div class="_1280-container w-container">
+      <a href="index.html" class="brand-2 w-nav-brand"><img src="images/LOGOWhite.svg" loading="lazy" alt=""></a>
+      <nav role="navigation" class="nav-menu-2 w-nav-menu">
+        <a href="index.html" class="navitem w-nav-link">Work</a>
+        <a href="old-home-2.html" class="navitem w-nav-link">About</a>
+        <a href="https://znap.link/desmondajimuda" target="_blank" class="navitem w-nav-link">Socials</a>
       </nav>
-      <div class="menu-button light light-theeeme _1 w-nav-button">
-        <div class="icon w-icon-nav-menu"></div>
+      <div class="menu-button-2 w-nav-button">
+        <div class="icon-2 w-icon-nav-menu"></div>
       </div>
     </div>
   </div>
